<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#48000000"
    android:orientation="vertical"
    android:paddingStart="10sp"
    tools:ignore="RtlSymmetry">

    <!--天气概述-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:orientation="vertical">

        <!--分割线-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginTop="10dp"
            android:background="#70F8F8F8" />

        <TextView
            android:id="@+id/summarize"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </LinearLayout>

    <!--空气质量-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dip"
        android:orientation="vertical">

        <!--分割线-->
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_marginBottom="5dip"
            android:background="#70FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:padding="1sp"
                android:text="@string/airMass"
                android:textColor="#88FFFFFF"
                android:textSize="9sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="1sp"
                android:text="@string/airMassEn"
                android:textColor="@color/white"
                android:textSize="9sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/airM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/airMassDetail"
            android:textColor="#88FFFFFF"
            android:textSize="20px" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:background="#70FFFFFF" />

    <!--体感温度和气压-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/feelsLike"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/feelsLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/altimeter"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/altimeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:background="#70FFFFFF" />

    <!--气压趋势和相对湿度-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/barometerTrend"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/barometerTrend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/humidity"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:background="#70FFFFFF" />

    <!--能见度和风速-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/visibility"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/visibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/windSpeed"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/windSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:background="#70FFFFFF"/>

    <!--风向标和风向角度-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/windDirCompass"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/windDirCompass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/windDirDegrees"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/windDirDegrees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:background="#70FFFFFF" />

    <!--紫外线等级-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/uvIndex"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/uvIndex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="1sp"
                android:text="@string/uvDescription"
                android:textColor="#88FFFFFF"
                android:textSize="9sp" />

            <TextView
                android:id="@+id/uvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>